[package]
name = "mssh"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-sse = "5.1.0"
futures-lite = "2.6.1"
isahc = { version = "1.7.2", default-features = false, features = ["json", "text-decoding"] }
mail-builder = "0.4.4"
mail-parser = "0.11.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
toml = "1.0.3"
# sequoia-openpgp = { version = "2", default-features = false, features = ["crypto-openssl"] }
# portable-pty = "0.9.0"
# ssh-key = { version = "0.6.7", default-features = false, features = ["std", "ed25519"] }

