[package]
name = "mssh"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0", default-features = false }
async-sse = { version = "5.1", default-features = false }
futures-lite = { version = "2.6", default-features = false, features = ["std"] }
isahc = { version = "1.7", default-features = false, features = [
    "json",
    "text-decoding",
] }
mail-builder = { version = "0.4", default-features = false }
mail-parser = { version = "0.11", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false }
tokio = { version = "1", default-features = false, features = [
    "macros",
    "rt-multi-thread",
    "time",
    "sync",
] }
toml = { version = "1.0", default-features = false, features = [
    "parse",
    "serde",
] }
sequoia-openpgp = { version = "2", default-features = false, features = [
    "crypto-openssl",
] }
portable-pty = { version = "0.9", default-features = false }
